Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9227

Changing rate of a TBF rule loses control in some testcases

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      In the following test cases, changing rate of a TBF rule lose control:

      start dd_0 {dd.0} 1000
      dd if=/dev/zero of=/mnt/lustre/test bs=1M count=100
      start dd_1000 {dd.1000} 1000
      

      After ran above commands, changing rate of dd_0 takes no effect.
      The reason is:

      starting rule dd_1000 increases the sequence, but the sequence number of the class with id "dd.0" does not change accordingly, resulting in failure of rate change.

            qian Qian Yingjin (Inactive)
            qian Qian Yingjin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: